Collect trust and safety tests
The slowest part of integration tests is seeding the database. This way we have to do that less often
