# docs/OpenApi/letterbook-v1.json
@@ -9,6 +9,55 @@
     "version": "v1"
   },
   "paths": {
+    "/lb/v1/peers/import": {
+      "post": {
+        "tags": [
+          "Peers"
+        ],
+        "summary": "Import",
+        "description": "Import a list of restricted peers",
+        "parameters": [
+          {
+            "name": "format",
+            "in": "query",
+            "schema": {
+              "$ref": "#/components/schemas/DenyListFormat"
+            }
+          },
+          {
+            "name": "mergeStrategy",
+            "in": "query",
+            "schema": {
+              "$ref": "#/components/schemas/MergeStrategy"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "string"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "type": "string"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "type": "string"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/lb/v1/policies/public/policy": {
       "get": {
         "tags": [
@@ -2153,63 +2202,6 @@
                 }
               }
             }
-          }
-        }
-      }
-    },
-    "/lb/v1/safety/{selfId}/peers/import": {
-      "post": {
-        "tags": [
-          "Safety"
-        ],
-        "summary": "Import",
-        "description": "Import a list of restricted peers",
-        "parameters": [
-          {
-            "name": "format",
-            "in": "query",
-            "schema": {
-              "$ref": "#/components/schemas/DenyListFormat"
-            }
-          },
-          {
-            "name": "mergeStrategy",
-            "in": "query",
-            "schema": {
-              "$ref": "#/components/schemas/MergeStrategy"
-            }
-          },
-          {
-            "name": "selfId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "type": "string"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "type": "string"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK"
           }
         }
       }
